--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,30 @@
 <html lang="en">
   
 <head>
-  <title>Quixlab - Bootstrap Admin Dashboard Template by Themefisher.com</title>
+  <title>Asset Tokenizer</title>
   <!-- Favicon icon -->
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
   <!-- Pignose Calender -->
   <link href="./plugins/pg-calendar/css/pignose.calendar.min.css" rel="stylesheet">
-  <!-- Chartist -->
+  <!-- Chartist --> 
   <link rel="stylesheet" href="./plugins/chartist/css/chartist.min.css">
   <link rel="stylesheet" href="./plugins/chartist-plugin-tooltips/css/chartist-plugin-tooltip.css">
   <!-- Custom Stylesheet -->
   <link href="css/style.css" rel="stylesheet">
-  <script>
-      function createChildLandCoin()
-      {
-          
-      }
-  </script>
+  <!-- <script src="https://app.tor.us/v0.0.20/embed.min.js"
+        integrity="sha384-tDTJ86ig+B5z7vXffrWKaBLC8dOCtiSV4a6OjWboyxfvcFNyL9Udxcld4kj1Wxny"
+        crossorigin="anonymous"></script>
+    <script>
+    </script>
+    <script>
+        function delay(){
+            setTimeout(() => {
+                console.log("delay");
+            },2000);
+        }
+
+        delay();
+    </script> -->
 </head>
 
 <body>
